# rabbitmq-worker-rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: simple_consumer.rs
src/: dlq.rs  error.rs  handler.rs  lib.rs  retry.rs  worker.rs
